--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,11 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.8.0",
-    "tailwindcss": "^4.1.11",
-    "@vitejs/plugin-react": "^4.7.0",
-    "vite": "^7.1.0"
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.7.0",
+    "vite": "^6.0.7",
     "@eslint/js": "^9.32.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
