--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,7 +1,10 @@
 {
-  "installCommand": "npm install",
+  "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
+  "installCommand": "npm install",
+  "framework": "vite",
+  "nodeVersion": "20.x",
   "rewrites": [
     {
       "source": "/(.*)",
