--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,9 +1,6 @@
 {
-  "version": 2,
-  "buildCommand": "npm run build",
+  "buildCommand": "npm install && npm run build",
   "outputDirectory": "dist",
-  "installCommand": "npm install",
-  "framework": "vite",
   "rewrites": [
     {
       "source": "/(.*)",
