--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.8.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "vite": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -30,7 +31,6 @@
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "vite": "^5.4.21"
+    "globals": "^16.3.0"
   }
 }
